--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "js-sha512": "^0.8.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
